--- a/configs/default-config.toml
+++ b/configs/default-config.toml
@@ -6,3 +6,7 @@ webserver_address = "localhost:10711"
 storage_engine = "MongoDB+file"
 # The path to the configuration file used by the storage engine.
 storage_engine_config = "./mongo-storage-config.toml"
+# If you want to run ShareX server behind a reverse proxy you should uncomment this and set the value to the real ip
+# address header. Be careful that headers in go are always set in lower case camel case, e.g. "REAL-IP-ADDRESS" would be
+# "Real-Ip-Address"
+#reverse_proxy_header = "X-Real-Ip"
