--- a/test/test-config.toml
+++ b/test/test-config.toml
@@ -7,3 +7,4 @@ webserver_address = ":80"
 storage_engine = "Magic+fairy_dust"
 # this is commented intentionally to test the default values
 #storage_engine_config = "./mongo-storage-config.toml"
+reverse_proxy_header = "This-Header-Contains-The-Real-IP"
