--- a/test/test-config.toml
+++ b/test/test-config.toml
@@ -8,3 +8,6 @@ storage_engine = "Magic+fairy_dust"
 # this is commented intentionally to test the default values
 #storage_engine_config = "./mongo-storage-config.toml"
 reverse_proxy_header = "This-Header-Contains-The-Real-IP"
+whitelisted_content_types = [
+    "first-ct", "a-mime-type", "sp€ci4l"
+]
